tests/baselines/reference/referenceTypesPreferedToPathIfPossible.errors.txt
usage.ts(1,1): error TS18055: Declaration file contains synthesized type reference directives: '"node"'


==== usage.ts (1 errors) ====
    import { parse } from "url";
    ~~~~~~
!!! error TS18055: Declaration file contains synthesized type reference directives: '"node"'
    export const thing = () => parse();
    
==== node_modules/@types/node/index.d.ts (0 errors) ====
    declare module "url" {
        export class Url {}
        export function parse(): Url; 
    }